Fix on mobile device it takes time to load hamburger menu

--- a/src/css/view/simple-menu.scss
+++ b/src/css/view/simple-menu.scss
@@ -1,3 +1,7 @@
+.eael-simple-menu-container {
+    min-height: 50px;
+}
+
 .elementor-widget-eael-simple-menu.eael-hamburger--mobile.eael-hamburger--responsive,
 .elementor-widget-eael-simple-menu.eael-hamburger--mobile_extra.eael-hamburger--responsive,
 .elementor-widget-eael-simple-menu.eael-hamburger--tablet.eael-hamburger--responsive,
